3_feb_Kubernetes_Networking_Continued/etxernal_name_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-db
spec:
  type: ExternalName
  externalName: example.com  # Redirects traffic to example.com
