3_feb_Kubernetes_Networking_Continued/headless_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-headless
spec:
  selector:
    app: nginx
  clusterIP: None  # This makes it a Headless Service
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
