3_feb_Kubernetes_Networking_Continued/deny_all.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-ingress
  namespace: network-policy-lab
spec:
  podSelector:
    matchLabels:
      app: web-app
  policyTypes:
  - Ingress
