3_feb_Kubernetes_Networking_Continued/egress_deny.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-egress-busybox-denied
spec:
  podSelector:
    matchLabels:
      app: busybox-denied  # Target only busybox-denied
  policyTypes:
    - Egress
  egress: []
